--- a/Rails-Project-Files/MySite/home.html.erb
+++ b/Rails-Project-Files/MySite/home.html.erb
@@ -1,6 +1,6 @@
 <div class="main">
   <div class="container">
     <h1>Hello my name is Brad Beiermann</h1>
-    <p>I make Rails apps.</p>
+    <p>I make Rails apps that work.</p>
   </div>
 </div>
